red text with white outline

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 			<li data-target="#myCarousel" data-slide-to="5"></li>
         </ol>
 <style>h2	{
-	color: black;
+	color: red;
 	text-shadow:
-	-1px -1px 0 #000,
-	1px -1px 0 #000,
-	-1px 1px 0 #000,
-	1px 1px 0 #000;  
+	-1px -1px 0 #FFFFFF,
+	1px -1px 0 #FFFFFF,
+	-1px 1px 0 #FFFFFF,
+	1px 1px 0 #FFFFFF;  
 }
 </style>
         <!-- Wrapper for slides -->
@@ -109,37 +109,37 @@
 			<div class="item active">
                 <div class="fill" style="background-image:url('images/home-1.jpg');"></div>
                 <div class="carousel-caption strokeme">
-                    <h2><font color="white"> Find one and receive a 30% discounted order!</font></h2>
+                    <h2>Find one and receive a 30% discounted order!</h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/3d-printing/3d_printer-2.jpg');"></div>
                 <div class="carousel-caption strokeme">
-                    <h2><font color="white">3D Printing</font></h2>
+                    <h2><font size="14">3D Printing</font></h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/cnc/cnc-3.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2><font color="white">CNC</font></h2>
+                    <h2><font size="14">CNC</font></h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/electronics/electronics-5.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2><font color="white">Electronics</font></h2>
+                    <h2><font size="14">Electronics</font></h2>
                 </div>
             </div>
 			<div class="item">
                 <div class="fill" style="background-image:url('images/laser/laser-3.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2><font color="white">Laser Engraving</font></h2>
+                    <h2><font size="14">Laser Engraving</font></h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/woodworking/woodworking-4.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2><font color="white">Woodworking</font></h2>
+                    <h2><font size="14">Woodworking</font></h2>
                 </div>
             </div>
         </div>
