--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    WNY’s premiere fabrication lab since 2014
+                    WNY’s premier fabrication lab since 2014
                 </h1>
             </div>
             <div class="col-md-4">
